welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: expected class or object definition
def faireCarre(){baisseBrosse(); leveBrosse()}
^FlowerPot:8: error: expected class or object definition
def Fleur(c: Color) {
^FlowerPot:12: error: expected class or object definition
def faireLigne(c.color1,c.color2) {
^FlowerPot:16: error: expected class or object definition
def faireLigne2() {
^FlowerPot:21: error: Unmatched closing brace '}' ignored here
}
^